k8s/12-fluent-bit-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: logging
spec:
  selector:
    matchLabels:
      app: fluent-bit
  template:
    metadata:
      labels:
        app: fluent-bit
    spec:
      serviceAccountName: fluent-bit
      containers:
        - name: fluent-bit
          image: fluent/fluent-bit:3.0
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: config
              mountPath: /fluent-bit/etc/
            - name: fluentbit-state
              mountPath: /var/fluent-bit/state/
            - name: varlibkubelet
              mountPath: /var/lib/kubelet/pods
              readOnly: true
            - name: etcssl
              mountPath: /etc/ssl/certs
              readOnly: true

      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: config
          configMap:
            name: fluent-bit-config
        - name: fluentbit-state
          hostPath:
            path: /var/lib/fluent-bit/
        - name: varlibkubelet
          hostPath:
            path: /var/lib/kubelet/pods
        - name: etcssl
          hostPath:
            path: /etc/ssl/certs
