k8s/01-loki.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      # ✅ InitContainer pour créer les dossiers requis avant le lancement
      containers:
        - name: loki
          image: grafana/loki:2.9.4
          args: ["-config.file=/etc/loki/loki.yaml"]
          ports:
            - name: http
              containerPort: 3100
            - name: grpc
              containerPort: 9095
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: storage
              mountPath: /loki

      volumes:
        - name: config
          configMap:
            name: loki-config
        - name: storage
          emptyDir: {}

#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: loki-pvc
#  namespace: logging
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 5Gi

---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: logging
spec:
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
