k8s/04-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: challengr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      # 🧩 Étape 1 — initContainer : télécharge l’agent avant le lancement
      containers:
        - name: auth-service
          image: auth-service:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082

          # 🌐 Variables d’environnement
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true

      # 🗂️ Volume partagé entre initContainer et conteneur principal
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: challengr
spec:
  selector:
    app: auth-service
  ports:
    - port: 8082
      targetPort: 8082
