k8s/05-challenge-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-service
  namespace: challengr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challenge-service
  template:
    metadata:
      labels:
        app: challenge-service
    spec:
      # 🧩 Étape 1 — initContainer : télécharge l’agent avant le lancement
      containers:
        - name: challenge-service
          image: challenge-service:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
  namespace: challengr
spec:
  selector:
    app: challenge-service
  ports:
    - port: 8080
      targetPort: 8080
