k8s/20-challenge-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: challenge-service, namespace: challengr }
spec:
  replicas: 1
  selector: { matchLabels: { app: challenge-service } }
  template:
    metadata: { labels: { app: challenge-service } }
    spec:
      containers:
        - name: app
          image: challenge-service:0.1
          imagePullPolicy: IfNotPresent
          ports: [ { containerPort: 8080 } ]
---
apiVersion: v1
kind: Service
metadata: { name: challenge-service, namespace: challengr }
spec:
  selector: { app: challenge-service }
  ports: [ { port: 8080, targetPort: 8080 } ]
