k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: challengr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service:v2025-10-19-04h12m
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082

          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true

      volumes:
        - name: otel-agent
          emptyDir: { }

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: challengr
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
