k8s/challenge-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-service
  namespace: challengr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challenge-service
  template:
    metadata:
      labels:
        app: challenge-service
    spec:
      containers:
        - name: challenge-service
          image: challenge-service:v2025-10-19-01h26m
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true

      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
  namespace: challengr
spec:
  selector:
    app: challenge-service
  ports:
    - port: 8080
      targetPort: 8080
