k8s/submission-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submission-service
  namespace: challengr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: submission-service
  template:
    metadata:
      labels:
        app: submission-service
    spec:
      containers:
        - name: submission-service
          image: submission-service:v2025-10-19-03h15m
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081

          volumeMounts:
            - name: otel-agent
              mountPath: /otel
              readOnly: true

      volumes:
        - name: otel-agent
          emptyDir: { }

---
apiVersion: v1
kind: Service
metadata:
  name: submission-service
  namespace: challengr
spec:
  selector:
    app: submission-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
