k8s/90-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challengr
  namespace: challengr
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: challengr.local
      http:
        paths:
          - path: /api/challenges
            pathType: ImplementationSpecific
            backend:
              service:
                name: challenge-service
                port: { number: 8080 }
          - path: /api/submissions
            pathType: Prefix
            backend:
              service:
                name: submission-service
                port: { number: 8081 }
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: submission-service
                port: { number: 8081 }
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port: { number: 8082 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port: { number: 80 }
